# N-Body-Simulation-HPC

./: README.md
phase1_sequential/: .gitignore  CMakeLists.txt  README.md  run.sh
phase2_openmp/: .gitignore  CMakeLists.txt  README.md  main.cpp  nbody_omp  run.sh
phase2_openmp/src/: main.cpp
phase3_mpi/: .gitignore  CMakeLists.txt  README.md  run.sh
phase3_mpi/src/: main.cpp
phase4_cuda/: CMakeLists.txt
phase4_cuda/src/: main.cu
